--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -1,38 +1,38 @@
 .big-button {
-    background-color: $purple;
-    border: none;
-    border-bottom: .6rem solid darken($purple, 10%);
-    color: #ffffff;
-    font-weight: 600;
-    font-size: $l-size;
-    width: 100%;
-    margin-bottom: $m-size;
-    padding: 2.4rem;
+  background-color: $purple;
+  border: none;
+  border-bottom: 0.6rem solid darken($purple, 10%);
+  color: #ffffff;
+  font-weight: 600;
+  font-size: $l-size;
+  width: 100%;
+  margin-bottom: $m-size;
+  padding: 2.4rem;
 }
 
 .big-button:disabled {
-    opacity: .5;
+  opacity: 0.5;
 }
 
 @media (min-width: $desktop-breakpoint) {
-    .big-button {
-        margin-bottom: $xl-size;
-    }
+  .big-button {
+    margin-bottom: $xl-size;
+  }
 }
 
 //Smaller buttons
 .button {
-    background: $purple;
-    border: none;
-    border-bottom: .3rem solid darken($purple, 10%);
-    color: #ffffff;
-    font-weight: 500;
-    padding: $s-size;
+  background: $purple;
+  border: none;
+  border-bottom: 0.3rem solid darken($purple, 10%);
+  color: #ffffff;
+  font-weight: 500;
+  padding: $s-size;
 }
 
 .button--link {
-    background: none;
-    border: none;
-    color: $off-white;
-    padding: 0;
+  background: none;
+  border: none;
+  color: $off-white;
+  padding: 0;
 }
