--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,10 +1,10 @@
-@import './base/settings';
-@import './base/base';
+@import "./base/settings";
+@import "./base/base";
 
-@import './components/add-option';
-@import './components/container';
-@import './components/header';
-@import './components/button';
-@import './components/widget';
-@import './components/option';
-@import './components/modal';
+@import "./components/add-option";
+@import "./components/container";
+@import "./components/header";
+@import "./components/button";
+@import "./components/widget";
+@import "./components/option";
+@import "./components/modal";
